wp-content/themes/twentythirteen/style.css
#contactform input[type="text"],
#contactform input[type="email"],
#contactform textarea{
  width: 90%;
  background:transparent;
}

.infinite-loader{
  background:transparent !important;
}

p {
  -moz-hyphens: none;
  -ms-hyphens: none;
  -webkit-hyphens: none;
  hyphens: none;
}

img.wp-post-image,
img.attachment-thumbnail,
img.attachment-medium,
img.attachment-large,
img.attachment-full {
  outline: .5px solid rgba(255,255,255,.5);
  -webkit-transition-property: outline; /* Safari */
  -webkit-transition-duration: .5s; /* Safari */
  transition-property: outline;
  transition-duration: .4s;
}
img.wp-post-image:hover,
img.attachment-thumbnail:hover,
img.attachment-medium:hover,
img.attachment-large:hover,
img.attachment-full:hover {
  outline: 10px solid rgba(140,175,230,.9);
  transition-property: outline;
  transition-duration: .4s;

}

#content {
  position: relative;
}
.content-header-tags {
  position: fixed;
  left: 50%;
  transform: translate3D(-50%, 0, 0);
  z-index: 99;
}
.content-header-title {
  position: fixed;
  left: 50%;
  transform: translate3D(-50%, 0, 0);
  z-index: 99;
}


.content-header-tags a {
  cursor: pointer;
}
.content-header-tags a.active {
  border-radius: 30px;
  background: rgba(145,173,195,.9);
  padding: 2px 1px 2px 4px;
  color: #fff;
}

.aboutimg {
  float:right;
  margin-left:10px;
}

.post {
  display: none;
}
.single-post .post {
  display: block;
}
.col .post {
   display: block;
}
.col {
  width: 25%;
  margin: 0 4%;
  display: inline-block;
  vertical-align: top;

     -webkit-transform: translateZ(0);
   -moz-transform: translateZ(0);
   -ms-transform: translateZ(0);
   -o-transform: translateZ(0);
   transform: translateZ(0);
}
.col.left {
}
.col.middle {
}
.col.right {
}
body {

}

.home-link-container {
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translateX(-50%);
  z-index: -1;
}
.menu-main-container {
  position: fixed;
  top: 119px;
  left: 50%;
  transform: translateX(-50%);
}
.home-link {
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate3d(-50%, -50%, 0);
  text-align: center;
}
ul.nav-menu {
  padding: 0 !important;
}
.nav-menu li {
  display: block !important;
  text-align: center;
}
#navbar.open {
  position: fixed;
  z-index: 101;
}
#nav-toggle {
  z-index: 101;
  position: fixed;
  top: 50px;
  left: 50%;
  width: 100px;
  transform: translateX(-50%);
}

#nav-scroll {
  display: none;
  position: fixed;
  bottom: 50px;
  left: 50%;
  width: 100px;
  transform: translateX(-50%);
  z-index: -1;
}
body.home #nav-scroll {
  display: block;
}
#masthead {
    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#a9d2f3+0,b3bbd8+15 */
  background: #a9d2f3; /* Old browsers */
  background: -moz-linear-gradient(top, #a9d2f3 0%, rgb(119,175,250)  50%); /* FF3.6+ */
  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#a9d2f3), color-stop(50%,rgb(119,175,250) )); /* Chrome,Safari4+ */
  background: -webkit-linear-gradient(top, #a9d2f3 0%,rgb(119,175,250)  50%); /* Chrome10+,Safari5.1+ */
  background: -o-linear-gradient(top, #a9d2f3 0%,rgb(119,175,250)  50%); /* Opera 11.10+ */
  background: -ms-linear-gradient(top, #a9d2f3 0%,rgb(119,175,250)  50%); /* IE10+ */
  background: linear-gradient(to bottom, #a9d2f3 0%,rgb(119,175,250)  50%); /* W3C */
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a9d2f3', endColorstr='rgb(119,175,250) ',GradientType=0 ); /* IE6-9 */
  width: 100%;
  height: 100%;
  overflow: hidden;
  position: fixed;
  top: 0;
  z-index: 100;
}
.site-main {
/*  /*position: absolute !important;
/*  width: 100%;
/*  top: 100%;*/
/*  position: static  !important;
/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#bcbdd8+0,a9d2f3+100 */
background: rgb(119,175,250); /* Old browsers */
background: -moz-linear-gradient(top, rgb(119,175,250) 0%, #91ADC3 100%); /* FF3.6+ */
background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#rgb(119,175,250)), color-stop(100%,#91ADC3)); /* Chrome,Safari4+ */
background: -webkit-linear-gradient(top, rgb(119,175,250) 0%,#91ADC3 100%); /* Chrome10+,Safari5.1+ */
background: -o-linear-gradient(top, rgb(119,175,250) 0%,#91ADC3 100%); /* Opera 11.10+ */
background: -ms-linear-gradient(top, rgb(119,175,250) 0%,#91ADC3 100%); /* IE10+ */
background: linear-gradient(to bottom, rgb(119,175,250) 0%,#91ADC3 100%); /* W3C */
filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#rgb(119,175,250)', endColorstr='#91ADC3',GradientType=0 ); /* IE6-9 */
}
.entry-title {
  font-size: 18px;
}
.entry-header {
  text-align: center;
}
.content-header {
  padding: 0;
  width: 100%;
  text-align: center;
}
.infinite-wrap {
  display: none;
}

#infinite-footer {
  display:none;
}

@media screen and (max-width: 500px) {
  .content-header-tags, .col {
    display: none;
  }
  .post, .infinite-wrap, #infinite-footer{
    display: block;
  }
}
/* ... */

